Replace video with SnailLoad music video

--- a/demo_server/index.html
+++ b/demo_server/index.html
@@ -89,7 +89,7 @@
         <p>While the picture on the left is loading, generate some network traffic by playing a YouTube video or opening a website.</p>
         <p>Here are some ideas on what you can do:</p>
         <ul class="suggestionlist">
-          <li class="videolistitem"><iframe class="videoframe" src="https://www.youtube.com/embed/P6dQlkJTPBY"></iframe></li>
+          <li class="videolistitem"><iframe class="videoframe" src="https://www.youtube.com/embed/oQpbSbeAJ2I"></iframe></li>
           <li><a href="https://en.wikipedia.org" target="_blank">Open Wikipedia</a></li>
           <li><a href="https://www.reddit.com" target="_blank">Open reddit</a></li>
         </ul>
