--- a/demo_server/index.html
+++ b/demo_server/index.html
@@ -95,5 +95,10 @@
         </ul>
       </div>
     </div>
+    <div class="row">
+      <p>
+        System hosted at Graz University of Technology | <a href="https://www.tugraz.at/en/about-this-page/legal-notice">Legal Notice</a> | <a href="https://www.tugraz.at/en/about-this-page/privacy-policy">Privacy Policy</a>
+      </p>
+    </div>
   </body>
 </html>
